<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:background="@drawable/dialog_border"
    tools:context=".EditBankDetails">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/hrp_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding_size"
        android:layout_margin="@dimen/standard_margin_size">

        <TextView
            android:id="@+id/title_edt_bank_dtl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edt_bk_dtl"
            android:textAlignment="center"
            android:textColor="@color/log"
            android:textSize="@dimen/standard_heading_size"
            android:layout_weight="0.2"
            android:padding="@dimen/standard_input_padding"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/standard_padding_size"
            android:background="@drawable/logbtn">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info1"
                    android:hint="@string/edt_acc_nm"
                    android:text="@string/acc_nm"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info2"
                    android:hint="@string/acc_no1"
                    android:text="@string/acc_no"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info3"
                    android:hint="@string/cnf_acc_no1"
                    android:text="@string/cnf_acc_no"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info4"
                    android:hint="@string/activity_register_info5"
                    android:text="@string/edt_ifsc"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info5"
                    android:hint="@string/pass_text1"
                    android:text="@string/pass_text"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:layout_margin="@dimen/standard_margin_size">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/add_follower_btm_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cst_text"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/standard_text_size"/>

                <TextView
                    android:id="@+id/hrp_amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amnt_txt"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/standard_amt_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hrp_text"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/standard_text_size"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/cfm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bluebtn"
            android:text="@string/cnf_btn_text"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/standard_margin_size"/>

    </LinearLayout>


</RelativeLayout>