<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:background="@drawable/dialog_border"
    tools:context=".TopupDialog">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/topup_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding_size"
        android:layout_margin="@dimen/standard_margin_size">

        <TextView
            android:id="@+id/title_topup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tpup_title"
            android:textAlignment="center"
            android:textColor="@color/log"
            android:textSize="@dimen/standard_heading_size"
            android:padding="@dimen/standard_layout_padding"/>

        <LinearLayout
            android:id="@+id/below_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info1"
                    android:hint="@string/acc_nm1"
                    android:text="@string/acc_nm_text"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/below_acc_nm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info2"
                    android:hint="@string/usr_nm1"
                    android:text="@string/usr_nm_text"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/below_usr_nm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info3"
                    android:hint="@string/amt_txt1"
                    android:text="@string/amt_txt"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/below_amt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info4"
                    android:hint="@string/cmsn_text1"
                    android:text="@string/cmsn_text"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding"
                    android:textSize="@dimen/standard_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/below_cmsn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logbtn"
            android:padding="@dimen/standard_padding_size">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info5"
                    android:hint="@string/pass_text1"
                    android:text="@string/pass_text"
                    style="@style/basic"
                    android:textColor="@color/text"
                    android:padding="@dimen/standard_input_padding" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abv_cnf_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:padding="@dimen/standard_padding_size">

                <TextView
                    android:id="@+id/cst_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cst_text"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/standard_text_size"/>

                <TextView
                    android:id="@+id/amt_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amt_text"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/standard_amt_size"/>

                <TextView
                    android:id="@+id/hrp_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hrp_text"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/standard_text_size"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/cfm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bluebtn"
            android:text="@string/cnf_btn_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/standard_text_size"/>

    </LinearLayout>



</RelativeLayout>