<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/back"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/text"
        android:layout_margin="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/text"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:text="@string/home1"
        style="@style/logtext" />

    <TextView
        android:id="@+id/text11"
        android:layout_centerVertical="true"
        android:layout_below="@id/text"
        android:textAlignment="center"
        android:text="@string/home11"
        style="@style/logtext" />

    <TextView
        android:id="@+id/text1"
        style="@style/basic"
        android:layout_below="@id/text11"
        android:layout_marginTop="10dp"
        android:text="@string/home2"
        android:textAlignment="center"
        android:textColor="@color/text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/text1"
        android:background="@drawable/ic_more_horiz_blue_24dp"
        />

    <LinearLayout
        style="@style/basic"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log"
            android:textColor="@color/log"
            android:background="@drawable/logbtn" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join"
            android:textColor="@android:color/white"
            android:background="@drawable/bluebtn" />

    </LinearLayout>

</RelativeLayout>